# interbotix_ros_core

./: .gitignore  .gitmodules  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: humble.yml  iron.yml  jazzy.yml  kinetic.yaml  melodic.yaml  noetic.yaml  rolling.yml  slate-humble.yaml  slate-noetic.yaml  xs-galactic.yaml  xs-humble.yaml  xs-melodic.yaml  xs-noetic.yaml  xs-rolling.yaml
interbotix_ros_common_drivers/interbotix_ros_footswitch/: CMakeLists.txt  README.md  package.xml
interbotix_ros_common_drivers/interbotix_ros_footswitch/interbotix_footswitch_driver/: CMakeLists.txt  package.xml
interbotix_ros_common_drivers/interbotix_ros_footswitch/interbotix_footswitch_driver/cmake/: FindHIDAPI.cmake  FindLIBUSB.cmake  libusb-1.0.cmake  test-libusb-version.cpp
interbotix_ros_common_drivers/interbotix_ros_footswitch/interbotix_footswitch_driver/include/interbotix_footswitch_driver/: footswitch_driver.hpp
interbotix_ros_common_drivers/interbotix_ros_footswitch/interbotix_footswitch_driver/src/: footswitch_driver.cpp  footswitch_driver_node.cpp
interbotix_ros_common_drivers/interbotix_ros_footswitch/interbotix_footswitch_msgs/: CMakeLists.txt  package.xml
interbotix_ros_common_drivers/interbotix_ros_footswitch/interbotix_footswitch_msgs/msg/: FootswitchState.msg
interbotix_ros_common_drivers/interbotix_ros_footswitch/src/: footswitch_driver.cpp
interbotix_ros_slate/interbotix_ros_slate/: CMakeLists.txt  README.md  package.xml
interbotix_ros_slate/interbotix_slate_driver/: CMakeLists.txt  README.md  package.xml
interbotix_ros_slate/interbotix_slate_driver/include/interbotix_slate_driver/: base_driver.h  base_driver.hpp  od_index.h  od_index.hpp  serial_driver.h  serial_driver.hpp  slate_base.h  slate_base.hpp
interbotix_ros_slate/interbotix_slate_driver/src/: base_driver.cpp  slate_base.cpp  slate_base_node.cpp
interbotix_ros_slate/interbotix_slate_msgs/: CMakeLists.txt  README.md  package.xml
interbotix_ros_slate/interbotix_slate_msgs/srv/: SetLightState.srv
interbotix_ros_uxarms/: README.md
interbotix_ros_xseries/: README.md
interbotix_ros_xseries/dynamixel_workbench_toolbox/include/dynamixel_workbench_toolbox/: dynamixel_tool.h
interbotix_ros_xseries/interbotix_ros_xseries/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xseries/interbotix_xs_msgs/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xseries/interbotix_xs_msgs/msg/: ArmJoy.msg  ClusterInfo.msg  HexJoy.msg  JointTemps.msg  LocobotJoy.msg  PixelCommands.msg  TurretJoy.msg
interbotix_ros_xseries/interbotix_xs_msgs/srv/: ClusterInfoArray.srv  FilterParams.srv  GripperCalib.srv  Reboot.srv  RobotInfo.srv  SnapPicture.srv  TorqueEnable.srv
interbotix_ros_xseries/interbotix_xs_sdk/: 99-interbotix-udev.rules  CMakeLists.txt  README.md  TROUBLESHOOTING.md  package.xml
interbotix_ros_xseries/interbotix_xs_sdk/config/: mode_configs_template.yaml  motor_configs_template.yaml  wx250s.yaml
interbotix_ros_xseries/interbotix_xs_sdk/include/interbotix_xs_sdk/: xs_sdk_obj.h  xs_sdk_obj.hpp
interbotix_ros_xseries/interbotix_xs_sdk/launch/: sdk.launch.py
interbotix_ros_xseries/interbotix_xs_sdk/msg/: JointGroupCommand.msg  JointSingleCommand.msg  JointTrajectoryCommand.msg
interbotix_ros_xseries/interbotix_xs_sdk/scripts/: xs_sdk_sim  xs_sdk_sim.py
interbotix_ros_xseries/interbotix_xs_sdk/src/: gripper_calib.cpp  xs_sdk.cpp  xs_sdk_obj.cpp  xs_sdk_obj_pj.cpp
interbotix_ros_xseries/interbotix_xs_sdk/srv/: MotorGains.srv  OperatingModes.srv  RegisterValues.srv
