<?xml version="1.0"?>
<package format="3">
  <name>interbotix_ros_slate</name>
  <version>0.0.0</version>
  <description>The interbotix_ros_slate metapackage</description>
  <maintainer email="trsupport@trossenrobotics.com">Trossen Robotics</maintainer>
  <license>BSD-3-Clause</license>

  <author email="trsupport@trossenrobotics.com">Trossen Robotics</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>interbotix_slate_driver</exec_depend>
  <exec_depend>interbotix_slate_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
