<package format="3">
  <name>interbotix_xs_msgs</name>
  <version>0.0.1</version>
  <description>
    interbotix_xs_msgs provides messages for the Interbotix X-Series family 
    of products.
  </description>
  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
